--- a/CSharpTracker/CSharpTracker/InstagramWindow.xaml
+++ b/CSharpTracker/CSharpTracker/InstagramWindow.xaml
@@ -1,13 +1,13 @@
-﻿<Window x:Class="CSharpTracker.MainWindow"
+﻿<Window x:Class="CSharpTracker.InstagramWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CSharpTracker"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="InstagramWindow" Height="450" Width="800">
     <Grid>
-        <Button Content="Instagram" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="342,347,0,0" VerticalAlignment="Top" Width="74" Click="Button_Click"/>
 
     </Grid>
 </Window>
