--- a/CSharpTracker/CSharpTracker/MainWindow.xaml
+++ b/CSharpTracker/CSharpTracker/MainWindow.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <Button Content="Facebook" HorizontalAlignment="Left" Margin="348,202,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+
     </Grid>
 </Window>
